--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MusicInstrumentLessoner</string>
+    <string name="appName">MusicInstrumentLessoner</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">GirlsDay mina</string>
@@ -8,9 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="app_name_kor">악기 레스너</string>
     <string name="splash_comment">"Bring the joy \nto your instrument"</string>
-
-    <!--login activity string-->
-    <string name="login_act_forgot_password">FORGOT \nPASSWORD?</string>
 
     <!--navigation bar string-->
     <string name="nav_bar_notification">notification</string>
@@ -21,9 +18,6 @@
 
     <!--search_layout string-->
     <string name="search_lay_placeholder">Search messages</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--notification_layout string-->
     <string name="teacher_upload_music">선생님께서 새로운 곡을 업로드 하였습니다.</string>
