--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name_kor">악기 레스너</string>
     <string name="splash_comment">"Bring the joy \nto your instrument"</string>
 
     <!--search_layout string-->
     <string name="search_lay_placeholder">Search messages</string>
+
+    <!--url-->
+    <string name="url">http://192.168.35.192:3000/api/</string>
 
 </resources>
