--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
 
     <!--search_layout string-->
     <string name="search_lay_placeholder">Search messages</string>
+    <string name="getUser">http://172.30.44.16:3000/api/user/</string>
+    <string name="getTemplate">http://172.30.44.16:3000/api/template/</string>
+    <string name="getNotification">http://172.30.44.16:3000/api/notification/</string>
+    <string name="getFile">http://172.30.44.16:3000/api/file/</string>
+    <string name="getGroup">http://172.30.44.16:3000/api/group/</string>
 
 </resources>
